# vibecoding-rust-scheduler

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  PRD.md  QUICKSTART_GUI.md  README.md  TAURI_SETUP.md  create_icon.py  install.ps1  install.sh
releases/v2.0.0/: README.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_provider.rs  main.rs  shift_schedule.rs
src/claude/: context.rs  mod.rs  prompts.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: mod.rs
src/daemon/: mod.rs  process.rs  tracker.rs
src/models/: accountability.rs  mod.rs  pomodoro.rs  schedule.rs  stats.rs  task.rs
src/storage/: json_storage.rs  mod.rs
src/tui/: app.rs  mod.rs  widget.rs
ui/: package.json  tailwind.config.js
ui/src/: App.tsx
ui/src/components/: ClaudeModal.tsx  DashboardView.tsx  PomodoroTimer.tsx  ScheduleView.tsx  Sidebar.tsx  TimelineView.tsx
ui/src/services/: api.ts  notificationService.ts
ui/src/types/: index.ts
