[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# === Core (Phase 0-1) ===

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Time handling
chrono = { version = "0.4.35", features = ["serde"] }

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# UUID generation
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Path handling
directories = "5.0.1"

# Config
toml = "0.8.10"
dirs = "5.0.1"

# === CLI (Phase 2) ===

# Command-line parsing
clap = { version = "4.5.1", features = ["derive", "cargo"] }

# Terminal colors
colored = "2.1.0"

# === Daemon (Phase 3) ===

# Logging
log = "0.4.20"
env_logger = "0.11.2"

# Signal handling
ctrlc = "3.4.2"

# === TUI (Phase 4) ===

# Terminal UI
ratatui = "0.26.1"
crossterm = "0.27.0"

[dev-dependencies]
# Testing
tempfile = "3.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
