[package]
name = "scheduler-app"
version = "2.0.0"
description = "Psychology-Based Daily Task Manager - Desktop App"
authors = ["Scheduler Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "dialog-ask", "dialog-confirm", "system-tray", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Re-export existing scheduler library
scheduler = { path = "../" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
